[package]
name = "alloc-compose"
version = "0.4.0"
authors = ["Tim Diekmann <tim.diekmann@3dvision.de>"]
edition = "2018"
description = "Composable allocator structures for plugging together more powerful allocators"
repository = "https://github.com/TimDiekmann/alloc-compose"
documentation = "https://docs.rs/alloc-compose"
readme = "README.md"
keywords = ["alloc"]
categories = ["no-std"]
license = "MIT OR Apache-2.0"
exclude = [".github/**"]

[features]
alloc = []
default = ["alloc"]

[badges]
codecov = { repository = "TimDiekmann/alloc-compose" }
is-it-maintained-issue-resolution = { repository = "timdiekmann/alloc-compose" }
is-it-maintained-open-issues = { repository = "timdiekmann/alloc-compose" }
maintenance = { status = "actively-developed" }
