[package]
name = "alloc-compose"
version = "0.5.0"
authors = ["Tim Diekmann <tim.diekmann@3dvision.de>"]
edition = "2018"
description = "Composable allocator structures for plugging together more powerful allocators"
repository = "https://github.com/TimDiekmann/alloc-compose"
documentation = "https://docs.rs/alloc-compose"
readme = "README.md"
keywords = ["alloc"]
categories = ["no-std"]
license = "MIT OR Apache-2.0"
exclude = [".github/**"]

[features]
alloc = []
default = ["alloc"]
intrinsics = []

[dev-dependencies]
# criterion = { version = "0.3", features = ["real_blackbox"] }

[[bench]]
name = "region"
harness = false
